勉強のためにOpen ID ConectのIDプロバイダー側をDjangoで実装する③

--- a/sampleapp/templates/login.html
+++ b/sampleapp/templates/login.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Company Registration</title>
+    <title>ユーザー情報提供同意画面</title>
   </head>
   <body>
     <form action="{% url 'sampleapp:authorize' %}" method="post">
